test/valid/Logic/Nand.plume
/**
 * Class to calculate the logical Nand operation
 * @author 35237, Marcos Vasco
 */
class Nand extends BinaryLogicalOperation is
  
  method override calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == true && val2 == true then false
    else true