test/invalid/NoNameForClass/NoNameForClass.plume
/**
 * @author 35237, Marcos Vasco
 */
class extends BinaryLogicalOperation is
  
  method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == true && val2 == true then true
    else false